# mqvpn

./: .gitignore  .gitleaks.toml  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  README.windows.txt  TRADEMARK.md  build.sh  mise.toml
.github/: dependabot.yml  requirements-apksigcopier.txt
.github/workflows/: android-repro.yml  ci.yml  codeql.yml  gitleaks.yml  perf-weekly.yml  perf.yml  release.yml  stress.yml  verify-android-keystore.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
android/sdk-core/: build.gradle.kts
android/sdk-native/: build.gradle.kts
android/sdk-network/: build.gradle.kts
android/sdk-runtime/: build.gradle.kts
bench_results/router_window/: router_window_20260722.csv
benchmarks/: bench_aggregate.sh  bench_aggregate_wan.sh  bench_env_setup.sh  bench_failover.sh  bench_failover_wan.sh  bench_flow_scaling.sh  bench_router_window.sh  bench_udp_sweep.sh  sweep_reorder.sh  sweep_reorder_analyze.py  sweep_single_path.sh
benchmarks/tcp_lane_microbench/: run.sh
docs/: api_audit.md  benchmarks.md  benchmarks_netns.md  benchmarks_v2.md  control-api.md  hybrid_h2_memory_budget.md  windows_build.md  xquic_baseline.md
docs/report/: 2026-06-18-reorder-only-datagram-multipath-connect-ip-en.md  2026-07-03-hybrid-h2a-microbench.md  2026-07-04-hybrid-h2b-throughput.md  2026-07-12-ios-poc-gates.md
formal/: MqvpnPathSlot.cfg  MqvpnPathSlot.tla  MqvpnPathSlot_live.cfg  README.md
formal/cbmc/: harness_path_on_event.c  model_step.h  run.sh  stubs.c
fuzz/: fuzz_tcp_lane.c
fuzz/corpus/: README.md  gen_tcp_lane_corpus.py
include/: libmqvpn.h
ios/: .gitignore  build-ios.sh
ios/poc/: Config.example.xcconfig  project.yml  ui-task-report.md
ios/poc/App/: BulkDownloadView.swift  DashboardView.swift  EventLog.swift  MqvpnPoCApp.swift  PathCardView.swift  ReorderIngest.swift  ReorderStatsCard.swift  (+1 more)
packaging/windows/: README.txt
scripts/: benchmark_flow_scaling.sh  benchmark_multipath_scheduler.sh  benchmark_ntn.sh  benchmark_report.py  benchmark_udp_scheduler.sh  bssl_build_guard.sh  build_android.sh  install.sh  mqvpn-server-nat.sh  run_ipv6_dataplane_test.sh  run_ipv6_transport_test.sh  run_killswitch_test.sh  run_multipath_test.sh  run_nat_test.sh  run_reconnect_test.sh  run_test.sh  run_wlb_test.sh  setup_server_nat.sh  stage_apk_license_assets.sh  start_server.sh  test_multiclient.sh  test_multiclient_multipath.sh  vps_setup.sh  vps_teardown.sh
scripts/ci_benchmarks/: ci_bench_aggregate.sh  ci_bench_backup_fec.sh  ci_bench_env.sh  ci_bench_failover.sh  ci_bench_flow_scaling.sh  ci_bench_multipath_scheduler.sh  ci_bench_ntn.sh  ci_bench_raw_throughput.sh  ci_bench_udp_scheduler.sh  ci_bench_udp_sweep.sh
scripts/ci_e2e/: run_8paths_dellink_test.sh  run_addr_del_failover_test.sh  run_admin_down_test.sh  run_backup_fec_test.sh  run_carrier_flap_test.sh  run_client_mgmt_ipc_phase1_test.sh  run_control_api_test.sh  run_d1_ip_change_rebind_test.sh  run_d1_port_only_retain_test.sh  run_dellink_test.sh  run_g_p10_proactive_cid_test.sh  run_g_p14_path_abandon_altpath_test.sh  run_g_p15_standby_signal_test.sh  run_g_p16_paths_blocked_emission_test.sh  run_ipv6_dataplane_test.sh  run_ipv6_full_multipath_test.sh  run_ipv6_multipath_test.sh  run_ipv6_transport_test.sh  run_killswitch_test.sh  run_nat_test.sh  run_reconnect_test.sh  run_route_gate_test.sh  run_systemd_test.sh  run_test.sh  run_throughput_floor_test.sh  run_validation_blackhole_test.sh  sanitizer_check.sh  test_multiclient.sh
scripts/ci_interop/: build_picoquic.sh
scripts/ci_publish/: publish_to_r2.sh
scripts/ci_stress/: ci_stress_env.sh  ci_stress_failover.sh  ci_stress_long_running.sh  ci_stress_multi_client.sh  ci_stress_reconnect.sh
scripts/dev/: insert_spdx.sh
scripts/lint/: check_lifecycle_field_writes.sh
src/: addr_pool.c  addr_pool.h  auth.c  auth.h  config.c  config.h  dns.c  dns.h  flow_sched.c  flow_sched.h  icmp.c  icmp.h  json_mini.h  log.c  log.h  main.c  mqvpn_client.c  mqvpn_config.c  mqvpn_conn_settings.c  mqvpn_conn_settings.h  mqvpn_internal.h  mqvpn_sched_names.h  mqvpn_scheduler.h  mqvpn_server.c  mqvpn_server_internal.h  mqvpn_util.c  path_entry_internal.h  path_mgr.c  path_mgr.h  path_state_machine.c  path_state_machine.h  platform_linux.c  platform_linux.h  reorder.h  reorder_gate.h  reorder_layout_selftest.c  reorder_rx.c  reorder_rx.h  reorder_tx.c  reorder_tx.h  (+6 more)
src/cli/: ctl_ipc.c  ctl_ipc.h  ctl_main.c
src/compat/: getopt.c  getopt.h  socket_compat.h
src/hybrid/: classifier.c  classifier.h  lwip_glue.c  lwip_glue.h  tcp_egress.c  tcp_egress.h  tcp_lane.c  tcp_lane.h  tcp_lane_internal.h  tcp_lane_uplink.c
src/mgmt/: mgmt_dispatch.c  mgmt_dispatch.h
systemd/: client.conf.example  client.json.example  mqvpn-client@.service  mqvpn-server.service  server.conf.example  server.json.example
tests/: check_lwip_profile_invariance.sh  check_ndebug_guard.sh  check_profile_propagation.py  fake_cmd.h  hybrid_h2_halfclose_client.py  hybrid_h2_lane_responder.py  hybrid_h2_lane_sender.py  hybrid_h2_v6_sink.py  hybrid_h2_v6_source.py  mgmt_endpoint_host.c  perf_fec_qos_ablation.sh  test_api.c  test_auth.c  test_classifier.c  test_cmp_json.c  test_config.c  test_conn_settings.c  test_control_response_bound.c  test_control_socket.c  test_dns.c  test_dns_backup_darwin.c  test_dns_state_darwin.c  test_e2e_8paths.sh  test_e2e_backup_fec.sh  test_e2e_control_api.sh  test_e2e_dellink.sh  test_e2e_dellink_8paths.sh  test_e2e_hybrid_h1.sh  test_e2e_hybrid_h2.sh  test_e2e_reorder.sh  test_e2e_wrong_psk.sh  test_flow_sched.c  test_killswitch_rules_darwin.c  test_mgmt_dispatch.c  test_path_state_machine.c  test_reorder_common.c  test_reorder_config.c  test_reorder_gate.c  test_reorder_rx.c  test_reorder_tx.c  (+10 more)
website/: benchmarks.md  index.md
website/benchmarks/: index.md  per-commit.md  weekly.md
website/guide/: architecture.md  building.md  configuration.md  getting-started.md  hybrid-mode.md  multipath.md
website/ja/: benchmarks.md  index.md
windows/: client.conf.example
(+261 files in other folders)
